[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pymavkit/messages", "pymavkit/protocols", "pymavkit"]

[project]
name = "pymavkit"
version = "0.1.0"
description = "MAVLink comms using pymavlink."
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymavlink",
]
